# Orbital-Share

./: .gitignore  AirSpace-Project-Reference.html  index.html  make_off_icon.cjs  make_off_icon3.cjs  package-lock.json  package.json  rebrand.py  test_icon2.cjs  test_icon3.cjs  vite.config.ts
electron/: main.cjs  preload.cjs
scripts/: normalize-mac-identity.cjs
server/: backgroundCleanup.js  capacityGuard.js  chunkFloodProtection.js  deviceRegistry.js  discovery.js  package-lock.json  package.json  productionLimits.js  productionLog.js  rateLimiter.js  secureSessionTokens.js  server.js  transferCapacity.js  transferChunkHandlers.js  transferEventGuards.js  transferHandlers.js  transferLimits.js  transferOwnershipValidation.js  transferPayloadValidation.js  transferSessionIdle.js  transferSessionSecurity.js  transferSessionState.js  transferSessions.js  transferTimeouts.js  websocketHandlers.js  wsMessageValidation.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/hooks/: useDeviceIdentity.ts  useFileDragState.ts
src/lib/: discoveryLayoutRegistry.ts  downloadReceivedFiles.ts  electron.ts  fileIcon.ts  format.ts  perFileTransferProgress.ts  sessionGuards.ts  transferBinaryProtocol.ts  transferChunkValidation.ts  transferCleanup.ts  transferEventSecurity.ts  transferFinalizing.ts  transferLifecycleReset.ts  transferLimits.ts  transferMetadataValidation.ts  transferProgressMetrics.ts  transferSessionIdentity.ts  (+6 more)
(+68 files in other folders)
