[package]
name = "airspace"
version = "1.0.0"
description = "AirSpace — Secure Local File Sharing Platform"
authors = []
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "airspace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = { version = "0.3", features = ["sink", "std"] }
mdns-sd = "0.11"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
once_cell = "1"
open = "5"
window-vibrancy = "0.5"
tauri-plugin-websocket = "2.4.2"

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true